--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
- <body>
-  <h1></h1>
-  <div id='chart' class='chart'”></div>
+<body>
+  <div id='chart' class='chart' style='height: 800px;'></div>
 </body>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
